--- a/app/src/main/res/layout/activity_translate_image.xml
+++ b/app/src/main/res/layout/activity_translate_image.xml
@@ -40,10 +40,25 @@
         android:textColor="#FFFFFF"
         android:background="@drawable/translate_image_btn" />
 
-    <TextView
+    <!--<TextView
         android:id="@+id/textResult"
         android:layout_below="@+id/albumBtn"
         android:layout_marginTop="70dp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textAllCaps="false"
+        android:textSize="20sp"
+        android:textColor="#FFFFFF"/> -->
+
+    <LinearLayout
+        android:id="@+id/resultLinearLayout"
+        android:orientation="horizontal"
+        android:layout_below="@+id/albumBtn"
+        android:layout_marginTop="70dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        >
+    </LinearLayout>
+
 </RelativeLayout>
